--- a/index.html
+++ b/index.html
@@ -1273,6 +1273,29 @@ module.directive('ngBind', function () {
 						<li><strong>Faites des tests unitaires</strong> : jasmine + karma = :)</li>
 					</ul>
 				</section>
+
+				<section>
+					<h2>Angular.js</h2>
+					<h5>Exercices</h5>
+					<ul>
+						<li>Récupérer le zip du tp</li>
+						<li>Enregistrer son login</li>
+						<li>Valider avec moi l'exercice</li>
+						<li>Récupérer le mot de passe de validation !</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Angular.js</h2>
+					<h5>Exercices</h5>
+					<ol>
+						<li>Récupérer les tweets en faisant un GET sur "/tweets"</li>
+						<li>Brancher le post d'un tweet</li>
+						<li>Ecrire un filtre pour afficher le login précédé du caractère '@'</li>
+						<li>Capter l'événement 'tweet:new' pour afficher les tweets en temps réel</li>
+						<li>Refactorer l'affichage du tweet en utilisant une directive</li>
+					</ol>
+				</section>
 			</div>
 
 		</div>
