--- a/tp/app/public/index.html
+++ b/tp/app/public/index.html
@@ -25,7 +25,7 @@
       <div>
         <div class="panel panel-default" ng-repeat="tweet in tweets | orderBy:'-time'">
           <div class="panel-body">
-            <span class="label label-primary">{{ tweet.login | tweetFilter }}</span>
+            <span class="label label-primary">{{ tweet.login }}</span>
             <span>{{ tweet.message }}</span>
           </div>
         </div>
@@ -33,59 +33,34 @@
     </div>
   </body>
 
-   <script type="text/javascript" src="angular.js"></script>
-   <script type="text/javascript" src="socket.io-1.2.0.js"></script>
-   <script type="text/javascript">
-      angular.module('tweetInsa', [])
-        .run(['$rootScope', function ($rootScope) {
-          var socket = io();
+  <script type="text/javascript" src="angular.js"></script>
+  <script type="text/javascript" src="socket.io-1.2.0.js"></script>
+  <script type="text/javascript">
+    angular.module('tweetInsa', [])
+      .run(['$rootScope', function ($rootScope) {
+        var socket = io();
 
-          socket.on('tweet:new', function(tweet) {
-            $rootScope.$apply(function () {
-              $rootScope.$broadcast('tweet:new', tweet);
-            });
+        socket.on('tweet:new', function(tweet) {
+          $rootScope.$apply(function () {
+            $rootScope.$broadcast('tweet:new', tweet);
           });
-        }])
+        });
+      }])
 
-        .filter('tweetFilter', function () {
-          return function (login) {
-            return '@' + login;
-          };
-        })
+      // TODO #3: Ecrire un filtre pour afficher le login précédé du caractère '@'
+      
+      // TODO #5: Ecrire un filtre pour afficher le login précédé du caractère '@'
+      
+      .controller('tweetsController', ['$scope', '$http', function ($scope, $http) {
+        $scope.tweets = [];
 
-        .directive('tweet', function () {
-          return {
-            restrict: 'E',
-            scope: {
-              tweet: '='
-            },
-            template: '' +
-              '<div class="panel-body">' +
-              '  <span class="label label-primary">{{ tweet.login | tweetFilter }}</span>' +
-              '  <span>{{ tweet.message }}</span>' +
-              '</div>'
-          };
-        })
+        // TODO #1 Récupérer les tweets en faisant un GET sur "/tweets"
 
-        .controller('tweetsController', ['$scope', '$http', function ($scope, $http) {
-          $scope.tweets = [];
+        $scope.submit = function (tweet) {
+          // TODO #2 Brancher le post d'un tweet en faisant un POST sur /tweets
+        };
 
-          var addTweet = function (tweet) {
-            $scope.tweets.push(tweet);
-          };
-
-          $http.get('/tweets')
-            .success(function (data) {
-              $scope.tweets = data;
-            });
-
-          $scope.$on('tweet:new', function (event, tweet) {
-            addTweet(tweet);
-          });
-
-          $scope.submit = function (tweet) {
-            $http.post('/tweets', tweet);
-          };
-        }]);
+        // TODO #4 Capter l'événement 'tweet:new' pour afficher les tweets en temps réel
+      }]);
    </script>
 </html>
