--- a/index.html
+++ b/index.html
@@ -1279,6 +1279,7 @@ module.directive('ngBind', function () {
 					<h5>Exercices</h5>
 					<ul>
 						<li>Récupérer le zip du tp</li>
+						<li>Lancer le serveur en lançant la commande "node server/app.js"</li>
 						<li>Enregistrer son login</li>
 						<li>Valider avec moi l'exercice</li>
 						<li>Récupérer le mot de passe de validation !</li>
