--- a/tp/backend/app/index.html
+++ b/tp/backend/app/index.html
@@ -57,7 +57,7 @@
           <tbody>
             <tr ng-repeat="user in users | orderBy:'-score'">
               <td>{{user.login}}</td>
-              <td>{{user.step}}</td>
+              <td># {{user.step}}</td>
               <td>{{user.score}}</td>
             </tr>
           </tbody>
