--- a/index.html
+++ b/index.html
@@ -681,6 +681,105 @@ superman.name = 'Superman';
 
 				<section>
 					<h2>Ecosystème</h2>
+					<h5>Single Page Application</h5>
+					Wikipédia: Une application web monopage (en anglais single-page application ou SPA) est une application web accessible via une page web unique. Le but est d'éviter le chargement d'une nouvelle page à chaque action demandée, et de fluidifier ainsi l'expérience utilisateur.
+				</section>
+
+				<section>
+					<h2>Ecosystème</h2>
+					<h5>Single Page Application</h5>
+					<ul>
+						<li>Dans une Single Page Application (SPA), la page html n'est jamais rechargée entièrement</li>
+						<li>Seul une partie de la page, le contenu dynamique, est mis à jour</li>
+						<li>
+							Exemples
+							<ul>
+								<li>Gmail</li>
+								<li>Facebook</li>
+								<li>etc.</li>
+							</ul>
+						</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Ecosystème</h2>
+					<h5>Single Page Application</h5>
+					<img src="images/spa.png">
+				</section>
+
+				<section>
+					<h2>Ecosystème</h2>
+					<h5>Single Page Application</h5>
+					Problème: la gestion de l'historique !
+				</section>
+
+				<section>
+					<h2>Ecosystème</h2>
+					<h5>Single Page Application</h5>
+					<ul>
+						<li>
+							Solutions:
+							<ul>
+								<li>Pendant longtemps, la solution a été d'utiliser le contenu situé aptès le caractère # (hash) : c'est la solution utilisée par Gmail</li>
+								<li>HTML5 standardise ce concept avec l'API push state : c'est la solution utilisée par Facebook</li>
+								<li>L'API push state est à préférer car c'est un standard et facilite l'indexation par les moteurs de recherches</li>
+							</ul>
+						</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Ecosystème</h2>
+					<h5>REST</h5>
+					<ul>
+						<li>REpresentational State Transfer</li>
+						<li>Standard d'échange entre un client et un serveur</li>
+						<li>Style d'architecture</li>
+						<li>Indépendant du protocole (http, etc.)</li>
+						<li>Très rare de l'utiliser sur un autre protocole que http</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Ecosystème</h2>
+					<h5>REST</h5>
+					Doit respecter ces contraintes:
+					<ul style="margin-top: 10px;">
+						<li>Client / Serveur</li>
+						<li>Stateless</li>
+						<li>Les échanges peuvent être mis en cache</li>
+						<li>Identification de resources</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Ecosystème</h2>
+					<h5>REST</h5>
+					Exemple: HTTP
+					<ul style="margin-top: 10px;">
+						<li>Client / Serveur : OK par définition</li>
+						<li>Stateless : OK par définition, même si ça peut être compliqué à cause des sessions</li>
+						<li>Les échanges peuvent être mis en cach : OK via les headers HTTP</li>
+						<li>Identification de resources : OK via les URL</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Ecosystème</h2>
+					<h5>REST</h5>
+					Exemple: Api Tweeter
+					<br>
+					<ul style="margin-top: 10px;">
+						<li>GET /tweets</li>
+						<li>POST /tweets</li>
+						<li>PUT /tweets</li>
+						<li>DELETE /tweets</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Ecosystème</h2>
 					<h5>Bonnes pratiques</h5>
 					<ul>
 						<li>
@@ -915,6 +1014,28 @@ angular.module('myApp')
 					<h2>Angular.js</h2>
 					<h5>$scope</h5>
 					<ul>
+						<li>Pour afficher les valeurs du scope, le plus simple est d'utiliser les "doubles moustaches"</li>
+						<li>Une autre façon est d'utiliser la directive <strong>ng-bind</strong></li>
+					</ul>
+					<pre><code class="html">
+<div ng-controller="myController">
+  Hello {{name}}
+
+  Hello <span ng-bind="name"></span>
+</div>
+					</code></pre>
+					<pre><code class="javascript">
+angular.module('myApp')
+  .controller('myController', ['$scope', function ($scope) {
+    $scope.name = 'world';
+  }]);
+					</code></pre>
+				</section>
+
+				<section>
+					<h2>Angular.js</h2>
+					<h5>$scope</h5>
+					<ul>
 						<li>La méthode $watch permet d'exécuter du code quand une valeur change</li>
 						<li>Ressemble fortement à Object.observe</li>
 					</ul>
@@ -1014,6 +1135,7 @@ $('#my-input').val(myValue);
 					<h5>Http</h5>
 					<ul>
 						<li>Angular.js fournit une api pour faire des requêtes HTTP</li>
+						<li>S'interface parfaitement avec une <strong>api REST</strong></li>
 						<li>Prend en charge toutes les spécificités des navigateurs</li>
 						<li>Il suffit d'injecter le service <strong>$http</strong> dans un contrôleur</li>
 						<li>
@@ -1259,6 +1381,17 @@ module.directive('ngBind', function () {
 						<li>Sujet vaste et compliqué qu'on n'abordera pas plus aujourd'hui</li>
 						<li>Nombreux exemples sur Github (angular-ui, angular-strap)</li>
 						<li>Beaucoup de directives Angular.js (ngBind, ngModel, etc.) sont simples à lire et sont très instructives</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Angular.js</h2>
+					<h5>Router</h5>
+					<ul>
+						<li>Le routeur Angular.js est un composant très simple</li>
+						<li>Il suffit de définir les routes disponibles et les templates html associés</li>
+						<li>La page doit contenir un élément avec un attribut ng-view</li>
+						<li>C'est ce bloc qui sera mis à jour à chaque changement de route</li>
 					</ul>
 				</section>
 
