--- a/demo/demo.html
+++ b/demo/demo.html
@@ -5,6 +5,8 @@
   </head>
   <body>
     <!-- Demo -->
+    <input type="text" ng-model="foo">
+    {{ foo | uppercase }}
     <script type="text/javascript" src="angular.js"></script>
   </body>
 </html>
