--- a/tp/app/public/index.html
+++ b/tp/app/public/index.html
@@ -14,25 +14,27 @@
     <div ng-controller="tweetsController" style="max-width: 800px; margin: auto;">
       <form name="tweetForm">
         <div class="form-group" style="text-align: center">
-          <input class="form-control" type="text" placeholder="Login" ng-model="tweet.login" ng-required>
+          <!-- TODO Mettre les directives ng-model pour binder les saisies utilisateurs. -->
+          <input class="form-control" type="text" placeholder="Login" ng-model="foo" ng-required>
           <br>
-          <textarea class="form-control" placeholder="Tweet" ng-model="tweet.message" ng-required></textarea>
+          <textarea class="form-control" placeholder="Tweet" ng-model="bar" ng-required></textarea>
           <br>
           <button class="btn btn-success" ng-click="submit(tweet);" ng-disabled="tweetForm.$invalid">Tweet !</button>
         </div>
       </form>
 
       <div>
-        <div class="panel panel-default" ng-repeat="tweet in tweets | orderBy:'-time'">
-          <div class="panel-body">
-            <span class="label label-primary">{{ tweet.login }}</span>
-            <span>{{ tweet.message }}</span>
+        <div class="panel panel-default">
+          <div class="panel-body" ng-repeat="tweet in tweets | orderBy:'-time'">
+            <!-- TODO Remplacer pour afficher le login et le message du tweet. -->
+            <tweet data="tweet"></tweet>
           </div>
         </div>
       </div>
     </div>
   </body>
 
+  <!-- TODO rajouter la balise script pour ajouter "angular.js" (présent dans /angular.js) -->
   <script type="text/javascript" src="angular.js"></script>
   <script type="text/javascript" src="socket.io-1.2.0.js"></script>
   <script type="text/javascript">
@@ -48,19 +50,51 @@
       }])
 
       // TODO #3: Ecrire un filtre pour afficher le login précédé du caractère '@'
-      
-      // TODO #5: Ecrire un filtre pour afficher le login précédé du caractère '@'
+      //          Remplacer également le html pour utiliser le filtre
+      .filter('tweetLogin', function () {
+        return function (login) {
+           return '@' + login;
+        };
+      })
+
+      // TODO #5: Ecrire la directive pour afficher un tweet
+      .directive('tweet', function() {
+        return {
+          restrict: 'E',
+          scope: {
+            data: '='
+          },
+          template: '<div><span class="label label-primary">{{ data.login | tweetLogin }}</span><span>{{ data.message }}</span></div>'
+        };
+      })
       
       .controller('tweetsController', ['$scope', '$http', function ($scope, $http) {
         $scope.tweets = [];
-
+        $http.get('/tweets')
+          .success(function (tweets) {
+            $scope.tweets = tweets;
+          })
         // TODO #1 Récupérer les tweets en faisant un GET sur "/tweets"
+        //         Remplacer également le html pour afficher le contenu du tweet
 
-        $scope.submit = function (tweet) {
+        $scope.submit = function () {
           // TODO #2 Brancher le post d'un tweet en faisant un POST sur /tweets
+          //         Modifier également le html pour binder les saisies utilisateurs
+          var tweet = {
+            login: $scope.foo,
+            message: $scope.bar
+          };
+
+          $http.post('/tweets', tweet)
+          /*.success(function () {
+            $scope.tweets.push(tweet);
+          })*/
         };
 
         // TODO #4 Capter l'événement 'tweet:new' pour afficher les tweets en temps réel
+        $scope.$on('tweet:new', function (event, tweet) {
+          $scope.tweets.push(tweet);
+        });
       }]);
    </script>
 </html>
