--- a/slides/index.html
+++ b/slides/index.html
@@ -74,8 +74,9 @@
 				<section data-markdown="markdown/01-zenika.md" data-separator="^---"></section>
 				<section data-markdown="markdown/02-javascript.md" data-separator="^---"></section>
 				<section data-markdown="markdown/03-ecosysteme.md" data-separator="^---"></section>
-				<section data-markdown="markdown/04-angular.md" data-separator="^---"></section>
-				<section data-markdown="markdown/05-conclusion.md" data-separator="^---"></section>
+				<section data-markdown="markdown/04-angular-fonctionnement.md" data-separator="^---"></section>
+				<section data-markdown="markdown/05-angular.md" data-separator="^---"></section>
+				<section data-markdown="markdown/06-conclusion.md" data-separator="^---"></section>
 			</div>
 		</div>
 
