--- a/slides/index.html
+++ b/slides/index.html
@@ -13,21 +13,13 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 		<link rel="stylesheet" href="vendors/reveal.js/css/reveal.css">
-		<link rel="stylesheet" href="vendors/reveal.js/css/theme/league.css" id="theme">
+		<link media="screen" rel="stylesheet" href="vendors/reveal.js/css/theme/league.css" id="theme">
+
+		<link media="print" rel="stylesheet" href="vendors/reveal.js/css/theme/beige.css">
+		<link media="print" rel="stylesheet" href="vendors/reveal.js/css/print/pdf.css">
 
 		<!-- For syntax highlighting -->
 		<link rel="stylesheet" href="vendors/reveal.js/lib/css/zenburn.css">
-
-		<!-- If the query includes 'print-pdf', include the PDF print sheet -->
-		<script>
-			if( window.location.search.match( /print-pdf/gi ) ) {
-				var link = document.createElement( 'link' );
-				link.rel = 'stylesheet';
-				link.type = 'text/css';
-				link.href = 'css/print/pdf.css';
-				document.getElementsByTagName( 'head' )[0].appendChild( link );
-			}
-		</script>
 
 		<!--[if lt IE 9]>
 		<script src="vendors/reveal.js/lib/js/html5shiv.js"></script>
