--- a/corrections/exercice_2/public/index.html
+++ b/corrections/exercice_2/public/index.html
@@ -26,7 +26,7 @@
       <div>
         <div class="panel panel-default">
           <div class="panel-body" ng-repeat="tweet in tweetCtrl.tweets | orderBy:'-time'">
-            <!-- TODO Remplacer pour afficher le login et le message du tweet. -->
+            <!-- TODO #2 Remplacer pour afficher le login et le message du tweet. -->
             <tweet data="tweet"></tweet>
           </div>
         </div>
@@ -34,7 +34,7 @@
     </div>
   </body>
 
-  <!-- TODO rajouter la balise script pour ajouter "angular.js" (présent dans /vendors/angular/angular.js) -->
+  <!-- TODO #1 rajouter la balise script pour ajouter "angular.js" (présent dans /vendors/angular/angular.js) -->
   <script type="text/javascript" src="vendors/angular/angular.js"></script>
   <script type="text/javascript" src="vendors/socket.io-client/socket.io.js"></script>
   <script type="text/javascript" src="js/app.js"></script>
